--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Demo
         </select>
       </span>
 
-      <span class="icon is-small is-right">
+      <span class="icon is-small is-left">
         <i class="fa fa-table"></i>
       </span>
     </span> <!-- /control -->
