--- a/usage.html
+++ b/usage.html
@@ -69,7 +69,7 @@ title: Usage
 
 <p>Multiple parameters may be combined together using the ampersand <code>&amp;</code> symbol. For example, consider the following URL:</p>
 
-<pre><a href="{{ "index.html" | absolute_url }}?prerender=false&shape=square&encoding=open&rows=4&scale=1.25"><span class="has-text-grey">{{ "index.html" | absolute_url }}</span>?<span class="has-text-danger">prerender</span>=<span class="has-text-primary">false</span>&amp;<span class="has-text-danger">shape</span>=<span class="has-text-primary">square</span>&amp;<span class="has-text-danger">encoding</span>=<span class="has-text-primary">open</span>&amp;<span class="has-text-danger">rows</span>=<span class="has-text-primary">4</span>&amp;<span class="has-text-danger">scale</span>=<span class="has-text-primary">1.25</span></a>
+<pre><a href="{{ "index.html" | absolute_url }}?prerender=false&shape=square&encoding=open&rows=4&scale=1.25" class="has-text-grey">{{ "index.html" | absolute_url }}?<span class="has-text-danger">prerender</span>=<span class="has-text-primary">false</span>&amp;<span class="has-text-danger">shape</span>=<span class="has-text-primary">square</span>&amp;<span class="has-text-danger">encoding</span>=<span class="has-text-primary">open</span>&amp;<span class="has-text-danger">rows</span>=<span class="has-text-primary">4</span>&amp;<span class="has-text-danger">scale</span>=<span class="has-text-primary">1.25</span></a>
 </pre>
 
 <p>This set of parameters will disable prerendering, use square shapes with no fill and an outline colored by class, animate 4 rows per frame, and use a 25% larger size for the SPLOM.</p>
