--- a/paper.html
+++ b/paper.html
@@ -70,6 +70,7 @@ title: Paper
   location  = &#123;{{ site.data.paper.about.location }}&#125;,
   publisher = &#123;{{ site.data.paper.about.publisher }}&#125;,
   address   = &#123;{{ site.data.paper.about.address }}&#125;,
+  isbn      = &#123;{{ site.data.paper.about.isbn  }}&#125;,
   doi       = &#123;{{ site.data.paper.about.doi }}&#125;,
   url       = &#123;{{ site.data.paper.about.url }}&#125;,
   month     = &#123;{{ site.data.paper.about.month }}&#125;,
@@ -77,7 +78,6 @@ title: Paper
   pages     = &#123;<em>TBA</em>&#125;-->
 }
 </pre>
-
 
 <h3>Media</h3>
 
