Adding media section.

--- a/paper.html
+++ b/paper.html
@@ -81,7 +81,32 @@ title: Paper
 
 <h3>Media</h3>
 
-<p>Pending.</p>
+<p>Find various videos and animated GIFs below. Feel free to share on social media!</p>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th>Preview</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    {% for item in site.data.media %}
+    <tr>
+      <td width="{{ item.preview.width }}" class="has-text-centered">
+        {{ item.html }}
+      </td>
+
+      <td>
+        <a href="{{ item.link }}"><i class="fa {{ item.icon }}"></i>&nbsp;{{ item.name }}</a><br/>
+        {{ item.info }}
+      </td>
+
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
 
 <h3>Materials</h3>
 
