Moving to relative links (easier to run website locally).

--- a/paper.html
+++ b/paper.html
@@ -133,6 +133,6 @@ title: Paper
 
 </ul>
 
-<p>See also our <a href="{{ "usage.html" | absolute_url }}">Usage</a> page for illustrations of how to use our tool.</p>
+<p>See also our <a href="usage.html">Usage</a> page for illustrations of how to use our tool.</p>
 
 </div>
