--- a/paper.html
+++ b/paper.html
@@ -36,10 +36,6 @@ title: Paper
 
 <h3>Citation</h3>
 
-<div class="notification is-primary">
-  <i class="fa fa-info-circle"></i> This paper has been <em>conditionally accepted</em> to CHI 2018. The citation information below will be updated when this status changes.
-</div>
-
 <p>
   {% for author in site.data.paper.authors %}{%
     if forloop.last == true
@@ -78,6 +74,10 @@ title: Paper
   pages     = &#123;<em>TBA</em>&#125;-->
 }
 </pre>
+
+<h3>Presentation</h3>
+
+<p>We will present this work on <strong>Thursday April 26th</strong> at 11:00am in the <q>Perception in Visualization 2</q> session in room 519AB in Montr&eacute;al.</p>
 
 <h3>Media</h3>
 
@@ -134,5 +134,13 @@ title: Paper
 </ul>
 
 <p>See also our <a href="usage.html">Usage</a> page for illustrations of how to use our tool.</p>
+
+<h3>Resources</h3>
+
+<p>Here are some additional resources and references that did not make it into the final version of the paper:</p>
+
+<ul>
+  <li><p>Ronak Etemadpour and Angus Graeme Forbes, <q><a href="http://journals.sagepub.com/doi/abs/10.1177/1473871615606187">Density-based Motion</a></q>, <em>Information Visualization</em>, Volume 16, Issue 1, pages 3&ndash;20, 2017.</p></li>
+</ul>
 
 </div>
