Adding link to session.

--- a/paper.html
+++ b/paper.html
@@ -77,7 +77,7 @@ title: Paper
 
 <h3>Presentation</h3>
 
-<p>We will present this work on <strong>Thursday April 26th</strong> at 11:00am in the <q>Perception in Visualization 2</q> session in room 519AB in Montr&eacute;al.</p>
+<p>We will present this work on <strong>Thursday April 26th</strong> at 11:00am in the <q><a href="https://chi2018.acm.org/technical-program/?timeslotId=-L6V0ystiKID-DUTHza7&sessionId=-L6UzzfZFcRqSMeZpna0">Perception in Visualization 2</a></q> session in room 519AB in Montr&eacute;al.</p>
 
 <h3>Media</h3>
 
