Adding presentation video.

--- a/paper.html
+++ b/paper.html
@@ -77,8 +77,10 @@ title: Paper
 
 <h3>Presentation</h3>
 
-<p>We will present this work on <strong>Thursday April 26th</strong> at 11:00am in the <q><a href="https://chi2018.acm.org/technical-program/?timeslotId=-L6V0ystiKID-DUTHza7&sessionId=-L6UzzfZFcRqSMeZpna0">Perception in Visualization 2</a></q> session in room 519AB in Montr&eacute;al.</p>
+<p>We presented this work on <strong>Thursday April 26th</strong> at 11:00am in the <q><a href="https://chi2018.acm.org/technical-program/?timeslotId=-L6V0ystiKID-DUTHza7&sessionId=-L6UzzfZFcRqSMeZpna0">Perception in Visualization 2</a></q> session in room 519AB in Montr&eacute;al. Visit <a href="https://youtu.be/VEraZBd3Wlw">youtu.be/VEraZBd3Wlw</a> for a recording of the presentation or view it below.</p>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/VEraZBd3Wlw?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>  
+  
 <h3>Media</h3>
 
 <p>Find various videos and animated GIFs below. Feel free to share on social media!</p>
